Fixed footer wrapping

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -184,6 +184,10 @@ body {
     .row {
         width: 450px;
     }
+
+    .wrap-text {
+        display: block;
+    }
 }
 
 /* -------------- *
